syntax = "proto3";

package hiveguard;

option cc_generic_services = true; // needed for brpc C++ service stubs

// Simple node identifier
message NodeId {
  string node_id = 1;
}

// Empty message
message Empty {}

// Cluster/node status snapshot
message GuardStatus {
  uint64 cluster_epoch = 1;
  uint64 node_epoch    = 2;
  bool   is_leader     = 3;
  bool   fenced        = 4;
}

// Fence / unfence request
message FenceRequest {
  string target_node_id = 1;
  bool   fenced         = 2; // true = fence, false = unfence
}

// Generic reply with success/failure
message OpResult {
  bool   ok        = 1;
  string error_msg = 2;
}

service HiveGuardService {
  // Ask this node for its view of guard status
  rpc GetStatus(Empty) returns (GuardStatus);

  // Fence / unfence a node (cluster-wide decision via Raft)
  rpc FenceNode(FenceRequest) returns (OpResult);

  // Explicitly bump cluster epoch
  rpc BumpClusterEpoch(Empty) returns (OpResult);

  // Bump node epoch (e.g. force incarnation change for a node)
  rpc BumpNodeEpoch(NodeId) returns (OpResult);
}
